--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=API - Authentication
+
+application.security.jwt.secret-key=mysecretkey
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=604800000
+
