--- a/src/test/resources/persistence-generic-entity.properties
+++ b/src/test/resources/persistence-generic-entity.properties
@@ -2,10 +2,7 @@ spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=
 spring.datasource.password=
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-spring.h2.console.enabled=true
 
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
@@ -15,3 +12,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.sql.init.mode=always
+
+application.security.jwt.secret-key=mysecretkey
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=604800000
