--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- MySQL -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- H2 Database -->
         <dependency>
             <groupId>com.h2database</groupId>
