Add ZAP logs check to workflow
A new step has been added to the GitHub workflow in zap_scan.yml.

--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -20,6 +20,9 @@ jobs:
         run: |
           docker run -d --name zap -p 8080:8080 -i owasp/zap2docker-stable zap.sh -daemon -port 8080 -host 0.0.0.0
 
+      - name: Check ZAP logs
+        run: docker logs $(docker ps -q --filter "ancestor=owasp/zap2docker-stable")
+
       - name: Run ZAP baseline scan
         run: |
           docker exec zap zap-baseline.py -t http://example.com -r zap_report.html
