--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -18,10 +18,7 @@ jobs:
 
       - name: Start OWASP ZAP
         run: |
-          docker run -d --name zap -p 8080:8080 -i zaproxy/zap-stable zap.sh -daemon -port 8080 -host 0.0.0.0
-
-      - name: Check ZAP logs
-        run: docker logs $(docker ps -q --filter "ancestor=zaproxy/zap-stable")
+          docker run -d --name zap -p 8080:8080 -v $(pwd):/zap/wrk:rw -i zaproxy/zap-stable zap.sh -daemon -port 8080 -host 0.0.0.0
 
       - name: Run ZAP baseline scan
         run: |
