Simplify OWASP ZAP startup in GitHub workflow
The "Check ZAP logs" step in the GitHub workflow for OWASP ZAP scan was removed. The docker run command in the "Start OWASP ZAP" step was also updated, including a volume mount for the working directory which consolidates and enhances the scanning step.

--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Run ZAP baseline scan
         run: |
           docker exec zap zap-baseline.py -t http://example.com -r zap_report.html
+        env:
+          ZAP_API_KEY: ${{ secrest.ZAP_API_KEY }}
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v3
