Simplify OWASP ZAP startup in GitHub workflow

--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           docker exec zap zap-baseline.py -t http://example.com -r zap_report.html
         env:
-          ZAP_API_KEY: ${{ secrests.ZAP_API_KEY }}
+          ZAP_API_KEY: ${{ secrets.ZAP_API_KEY }}
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v3
