Simplify OWASP ZAP startup in GitHub workflow

--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -20,6 +20,9 @@ jobs:
         run: |
           docker run -d --name zap -p 8080:8080 -v $(pwd):/zap/wrk:rw -i zaproxy/zap-stable zap.sh -daemon -port 8080 -host 0.0.0.0
 
+      - name: Verify Permissions
+        run: docker exec zap ls -l /zap /zap/wrk
+
       - name: Run ZAP baseline scan
         run: |
           docker exec zap zap-baseline.py -t http://example.com -r zap_report.html
