--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -25,9 +25,12 @@ jobs:
 
       - name: Run ZAP baseline scan
         run: |
-          docker exec zap zap-baseline.py -t http://example.com -r zap_report.html
+          docker exec zap zap-baseline.py -t http://example.com -r /tmp/zap_report.html
         env:
           ZAP_API_KEY: ${{ secrets.ZAP_API_KEY }}
+
+      - name: Copy report from Docker container
+        run: docker cp zap:/tmp/zap_report.html .
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v3
