Update zap_scan workflow permissions
The code comments have been removed from the permissions field in the zap_scan.yml workflow. In addition, a new step has been added for changing permission settings for the /zap/wrk directory in the Docker container, making the write directory more secure.

--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # donne l'autorisation d'écrire dans le dépôt
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -22,6 +22,12 @@ jobs:
       - name: Start OWASP ZAP
         run: |
           docker run -d --name zap -p 8080:8080 -v $(pwd):/zap/wrk:rw -i zaproxy/zap-stable zap.sh -daemon -port 8080 -host 0.0.0.0
+
+      - name: Change permissions for /zap/wrk
+        run: |
+          docker exec zap mkdir -p /zap/wrk
+          docker exec zap chmod 777 /zap/wrk
+        shell: /usr/bin/bash -e {0}
 
       - name: Run ZAP baseline scan
         run: |
