Update tests and application.yml configurations

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  # Configuration de la source de données MySQL
+  # Configuration de la source de donnÃ©es MySQL
   datasource:
     url: jdbc:mysql://34.248.75.185:3306/IT-Budget-DB
     username: Charles
