--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,18 +1,23 @@
 spring:
   # Configuration de la source de données MySQL
   datasource:
-    url: jdbc:mysql://34.248.75.185:3306/IT-Budget-DB
-    username: Charles
-    password: 78jXKyE65VtovYxNk5SoWdn3sV58qz
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
   # Configuration de JPA (Java Persistence API)
   jpa:
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: create-drop
     show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
 
 # JWT Token Configuration
 application:
