Refactor authentication-related code and improve logging
The token handling within the AccountController has been adjusted to remove the "BEARER " prefix from each token. Additionally, the import statements in User and Role entities have been optimized and @ToString annotation for exclusion fields have been added. Logging level for Spring Security has been set to DEBUG in application.yml. Some unused imports and redundant code lines were removed in other classes.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,9 @@ application:
       expiration: 86400000
       refresh-token:
         expiration: 604800000
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
