--- a/.github/workflows/test-maven.yml
+++ b/.github/workflows/test-maven.yml
@@ -20,24 +20,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
       - name: Build with Maven
-        run: mvn clean install
-
-      - name: Run tests and generate Jacoco report
-        run: mnv test jacoco:report
-
-      - name: Upload Jacoco report
-        run: actions/upload-artifact@v3
-        with:
-          name: jacoco-report
-          path: target/site/jacoco
+        run: mvn -B package --file pom.xml
