--- a/.github/workflows/report-jacoco.yml
+++ b/.github/workflows/report-jacoco.yml
@@ -12,11 +12,15 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
       - name: Run Coverage
         run: |
           chmod +x gradlew
@@ -29,6 +33,6 @@ jobs:
           paths: |
             ${{ github.workspace }}/**/build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
             ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
           min-coverage-overall: 40
           min-coverage-changed-files: 60
