--- a/.github/workflows/report-jacoco.yml
+++ b/.github/workflows/report-jacoco.yml
@@ -12,9 +12,12 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}  # Utilisation du secret configuré
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
