--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Start OWASP ZAP
         run: |
-          docker run -d --name zap -p 8080:8080 -v $(pwd):/zap/wrk:rw -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -i zaproxy/zap-stable zap.sh -daemon -port 8080 -host 0.0.0.0
+          docker run -d --name zap -p 8080:8080 -v $(pwd):/zap/wrk:rw -i zaproxy/zap-stable zap.sh -daemon -port 8080 -host 0.0.0.0 --config api.disablekey=true
 
       - name: Run ZAP baseline scan
         run: |
