--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           docker exec zap zap-baseline.py -t http://example.com -r /zap/wrk/zap_report.html
         env:
-          ZAP_API_KEY: ${{ secrets.ZAP_API_KEY }}
+          ZAP_API_KEY: ${{ secrets.REPO_ACCESS_TOKEN }}
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
