Enable SQL formatting and debugging
The application.yml file has been updated to enable SQL formatting and debugging. A 'format_sql: true' property was added under the 'hibernate' section to format SQL statements for readability. Furthermore, logging for 'hibernate.SQL' was set to DEBUG for a more detailed output.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+
 
   # Email Configuration
   mail:
@@ -42,5 +44,7 @@ application:
 logging:
   level:
     org:
+      hibernate:
+        SQL: DEBUG
       springframework:
         security: DEBUG
