--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,11 +12,11 @@ spring:
   # Configuration de JPA (Java Persistence API)
   jpa:
     hibernate.ddl-auto: create-drop
-    show-sql: true
+    show-sql: false
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
 
   # Email Configuration
   mail:
