Update server settings and enable DiscoveryClient
Updated the `application.yml` to change the server port and spring application name. Also enabled 'prefer-ip-address' under the Eureka client instance. Made changes to the `pom.xml` comment for better clarification. Modified the `Token` entity to specify length for the `token` column. Lastly, enabled DiscoveryClient in the `ApiAuthenticationApplication` class.

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Spring cloud -->
+        <!-- Spring Clout Eureka -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
