Change JPA Hibernate ddl-auto setting to 'none'
Updating the JPA Hibernate `ddl-auto` setting from 'update' to 'none' ensures that the schema will not be auto-generated or updated at runtime. This change is critical in preventing unintended schema modifications during application execution. It also allows for greater control over database schema management.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 
   # Configuration de JPA (Java Persistence API)
   jpa:
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: none
     show-sql: false
     properties:
       hibernate:
